# ralphify

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  PROMPT.md  RALPH.md  README.md  agr.toml  justfile  mkdocs.yml  pyproject.toml  ralph.toml
.github/workflows/: docs.yml  publish.yml  test.yml
agent_docs/: CODEBASE_MAP.md
context/blog_posts/: ralph_wiggum_as_a_software_engineer.md
cookbooks/improve-codebase/: RALPH.md
cookbooks/research/: review.sh
docs/: 404.md  agents.md  api.md  best-practices.md  changelog.md  cli.md  contributing.md  cookbook.md  dashboard.md  faq.md  getting-started.md  hooks.md  how-it-works.md  index.md  llms-full.txt  llms.txt  primitives.md  prompts.md  quick-reference.md  troubleshooting.md  when-to-use.md  why-ralphify.md  writing-prompts.md
docs/blog/: .authors.yml  index.md
docs/contributing/: codebase-map.md  index.md  tui-dev-harness.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
examples/autoresearch/: RALPH.md  show-last-run.sh  show-results.sh
examples/codex/: RALPH.md
examples/docs/: RALPH.md
examples/migrate/: RALPH.md  count-remaining.sh
examples/optimize-docs/: RALPH.md
examples/promise-completion/: RALPH.md
examples/python-dev/: RALPH.md
examples/research/: CONVENTIONS.md  show-maturity.sh  show-outline.sh  show-questions.sh
examples/security/: RALPH.md
examples/test-coverage/: RALPH.md
ralphloops/: README.md
ralphs/bug-hunter/: RALPH.md
ralphs/execute-tasks/: RALPH.md
ralphs/research/: RALPH.md  show-focus.sh
research/ralph-loops/: REPORT.md
scripts/tui_dev/: fixtures.py  live.py  render.py  run.sh  snapshot.py
skills/brand-guidelines/: SKILL.md
skills/ralphify-release/: SKILL.md
skills/release/: SKILL.md
src/ralphify/: __init__.py  _agent.py  _brand.py  _console_emitter.py  _discovery.py  _events.py  _frontmatter.py  _keypress.py  _output.py  _promise.py  _resolver.py  _run_types.py  _runner.py  _skills.py  _source.py  _templates.py  _wind_down_shim.py  checks.py  cli.py  contexts.py  detector.py  engine.py  hooks.py  instructions.py  manager.py  prompts.py  ralphs.py  resolver.py
tasks/: README.md
tasks/done/: critical-01-capture-strategy-three-way-branch.md  critical-02-pump-stream-exception-handling.md  critical-03-stdin-write-timeout.md  critical-04-bounded-reader-thread-joins.md  high-01-echo-output-live-spinner-coordination.md  high-02-read-agent-stream-deadline-and-buffering.md  high-03-test-helpers-pid-hazard.md  high-04-peek-discoverability.md  medium-01-agent-output-line-event-filtering.md  medium-02-returncode-semantic-change-docs.md  medium-03-keypress-signal-handling.md  medium-04-peek-lock-discipline.md  (+1 more)
tests/: conftest.py  helpers.py  test_adapters_claude.py  test_adapters_codex.py  test_adapters_copilot.py  test_adapters_golden.py  test_adapters_registry.py  test_agent.py  test_checks.py  test_cli.py  test_cli_frontmatter_fields.py  test_console_emitter.py  test_contexts.py  test_detector.py  test_discovery.py  test_engine.py  test_events.py  test_frontmatter.py  test_hooks.py  test_init.py  test_keypress.py  test_manager.py  test_output.py  test_persistence.py  test_promise.py  test_ralphs.py  test_resolver.py  test_run_types.py  test_runner.py  test_skills.py  test_source.py  test_wind_down_shim.py
website/: index.html  robots.txt  sitemap.xml  styles.css
(+47 files in other folders)
