[project]
name = "ralphify"
version = "0.1.0"
description = "Harness toolkit for autonomous AI coding loops"
requires-python = ">=3.11"
dependencies = ["typer>=0.9", "rich>=13.0"]

[project.scripts]
ralph = "ralphify:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ralphify"]
