[project]
name = "ralphify"
version = "0.1.7"
description = "Harness toolkit for autonomous AI coding loops"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["ai", "autonomous", "coding", "agent", "loop", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["typer>=0.9", "rich>=13.0"]


[project.scripts]
ralph = "ralphify:main"

[dependency-groups]
dev = [
    "aiosqlite>=0.20",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.5",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "pytest>=8.0",
]

[project.urls]
Documentation = "https://ralphify.co/docs/"
Repository = "https://github.com/computerlovetech/ralphify"
Issues = "https://github.com/computerlovetech/ralphify/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ralphify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
